# nuc-vector-orchestrator

./: .coverage  .gitignore  REPO_MAP.md  pyproject.toml
.claude/: CLAUDE.md
apps/vector/native/vector-streamer/: CMakeLists.txt  camera.h  engine_proxy.c  engine_proxy.h  h264_encoder.c  h264_encoder.h  main.c  mic.c  mic.h  opus_encoder.c  opus_encoder.h  protocol.h  tcp_server.c  tcp_server.h  vicos-toolchain.cmake
apps/vector/native/vector-streamer/victor-reference/clad/: cloudmic_message.h  cloudmic_tag.h  messageEngineToRobot.h
config/: llm-provider.yaml  sprint-definitions.yaml  travel-mode.conf
docs/: 00-project-overview.md  RETROSPECTIVE.md  ROADMAP.md  backlog.md  lessons-learned.jsonl  openclaw-auth.md  vector-golden-test-plan.md  vic-anim-patch-research.md
scripts/: backup-openclaw.sh  benchmark-openvino.py  board-check.sh  chatgpt-query.py  chatgpt-save-token.py  chatgpt-server.py  claude-wrapper.sh  export-openvino-models.py  inbox-responder.sh  intercom-server.py  kill-all.sh  log-token-usage.sh  monarch-login.py  openclaw-voice-proxy.py  openvino-setup.sh  pgm-signal-gate.sh  refresh-fitness-tokens.py  refresh-fitness-tokens.sh  refresh-tokens.sh  run-physical-test.sh  signal-group-monitor.sh  signal-interactive.sh  sprint-advance.sh  sprint-changelog.sh  sprint-end.sh  start-all.sh  summarize-comments.py  sync-openclaw.sh  test-llm-provider.sh  token-report.sh  travel-mode.sh  travel-pin.py  update-project-summary.sh  vector-physical-test.sh  vector-quiet-mode.py  wire-pod-start.sh
tests/: test_agent_loop.py  test_agent_loop_cycle_control.py  (+8 more)
(+297 files in other folders)
